<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button!</string>
    <string name="login_hint">login name</string>

    <string name="loginhinttext">login name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="buttonlogin">Login</string>

    <string name="btn1Text">Radio Button</string>
    <string name="btn2Text">Button 2</string>
    <string name="SwitchText">Enable Something</string>

    <string name="login_default">example@domain.com</string>
    <string name="login_key">Default Email</string>

    <string name="start_chat_text">Start Chat</string>
    <string name="edit_chat_text">Edit Chat</string>
    <string name="chat_send_text">Send</string>

    <string name="weather_forecast">  Weather Forecast </string>
    <string name="cur_temp">Current Temperature </string>
    <string name="min_temp">Minimum Temperature </string>
    <string name="max_temp">Maximum Temperature </string>
    <string name="wind_spd">Wind Speed </string>
    <string name="weatherImage">A weather related image</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="pick_color">Do you want to go back? </string>

    <string name="dialog_message">Welcome alert dialog message </string>
    <string name="cancel">cancel</string>
    <string name="ok">OK</string>

</resources>
