<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sohaila.androidlabs.StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message" />

    <Button
        android:id="@+id/button"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText" />

    <Button
        android:id="@+id/start_chat_btn"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:text="@string/start_chat_text" />

    <Button
        android:id="@+id/button_Weather_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/weather_forecast"
        android:layout_below="@+id/buttonChat"
        android:layout_alignParentStart="true" />

</LinearLayout>
